--- a/src/sass/estilos.scss
+++ b/src/sass/estilos.scss
@@ -1,26 +1,36 @@
 @import "./testimonials.scss";
+@import "./footer.scss";
 body {
     font-family: 'Inter', sans-serif;
     font-size: 32px;
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
     height: 100vh;
 }
 
 :root {
-    --dark-Blue: hsl(240, 38%, 20%);
-    --grayish-Blue: hsl(240, 18%, 77%);
+    --dark-Blue: rgb(32, 32, 70);
+    --grayish-Blue: rgb(186, 186, 207);
 }
 
 .wrapper {
     padding: 0 .7em;
+    padding-top: 1em;
 }
 
 .testimonial-text {
+    color: var(--dark-Blue);
     font-weight: 300;
     font-size: .6em;
     text-align: center;
     span {
         display: block;
+        text-align: center;
+        // border: 1px solid red;
+    }
+    span:nth-child(1) {
+        padding-top: 2em;
+        font-weight: bold;
     }
 }
