--- a/src/sass/footer.scss
+++ b/src/sass/footer.scss
@@ -1,7 +1,7 @@
 .footer {
     .wave {
         background: url(../../images/pattern-curve.svg) bottom left no-repeat;
-        background-size: cover;
+        background-size: 340px, cover;
         height: 100px;
         // border: 1px solid red;
     }
