--- a/src/sass/estilos.scss
+++ b/src/sass/estilos.scss
@@ -24,6 +24,7 @@ body {
     font-weight: 300;
     font-size: .6em;
     text-align: center;
+    margin-bottom: 0;
     span {
         display: block;
         text-align: center;
