--- a/static/css/estilos.css
+++ b/static/css/estilos.css
@@ -28,7 +28,7 @@
 
 .footer .wave {
   background: url(../../images/pattern-curve.svg) bottom left no-repeat;
-  background-size: cover;
+  background-size: 340px, cover;
   height: 100px;
 }
 
@@ -56,6 +56,7 @@ body {
   font-weight: 300;
   font-size: 0.6em;
   text-align: center;
+  margin-bottom: 0;
 }
 .testimonial-text span {
   display: block;
