--- a/src/sass/testimonials.scss
+++ b/src/sass/testimonials.scss
@@ -1,24 +1,26 @@
 .testimonial-content {
     display: grid;
     grid-row-gap: 1em;
+    justify-content: center;
     .testimonial-image {
         height: 311px;
         // border: 1px solid red;
         // background: url(../../images/image-tanya.jpg) center no-repeat;
         background: url(../../images/pattern-bg.svg) center no-repeat;
-        background-size: cover;
-        width: 330px;
+        background-size: 290px, cover;
+        // width: 330px;
         position: relative;
         .testimonial-img {
-            max-width: 250px;
+            max-width: 225px;
             border-radius: 5px;
             width: 100%;
             margin: 0 auto;
             position: absolute;
             right: 0;
             left: 0;
-            top: 30px;
+            top: 45px;
             box-shadow: 0 50px 70px -50px;
+            object-fit: cover;
         }
     }
     .testimonial-text-content {
