--- a/src/sass/testimonials.css
+++ b/src/sass/testimonials.css
@@ -1,10 +1,76 @@
-.testimonial-content {
-  border: 1px solid red;
+.testimonial {
+  max-width: 850px;
 }
 
-.testimonial-content-images {
+.testimonial .testimonial-content .testimonial-image {
+  height: 311px;
+  background: url(../../images/pattern-bg.svg) center no-repeat;
+  background-size: 290px, cover;
+  position: relative;
+}
+
+@media screen and (min-width: 1024px) {
+  .testimonial .testimonial-content .testimonial-image {
+    background-size: 333px, cover;
+  }
+}
+
+.testimonial .testimonial-content .testimonial-image .testimonial-img {
+  max-width: 225px;
+  border-radius: 5px;
   width: 100%;
   margin: 0 auto;
-  border: 1px solid red;
+  position: absolute;
+  right: 0;
+  left: 0;
+  top: 45px;
+  -webkit-box-shadow: 0 50px 70px -50px;
+          box-shadow: 0 50px 70px -50px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+@media screen and (min-width: 1024px) {
+  .testimonial .testimonial-content .testimonial-image .testimonial-img {
+    max-width: 260px;
+    top: 30px;
+  }
+}
+
+.testimonial .testimonial-content .testimonial-text-content {
+  background: url(../../images/pattern-quotes.svg) center top no-repeat;
+  background-size: 70px;
+  padding-top: .4em;
+}
+
+@media screen and (min-width: 1024px) {
+  .testimonial .testimonial-content .testimonial-text-content {
+    background-position: 60px top;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .testimonial .testimonial-content {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: "content image";
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .testimonial .testimonial-content .testimonial-image {
+    -ms-grid-row: 1;
+    -ms-grid-column: 2;
+    grid-area: image;
+  }
+}
+
+.testimonial .testimonial-content .testimonial-text-content {
+  grid-area: content;
 }
 /*# sourceMappingURL=testimonials.css.map */
