--- a/src/sass/estilos.css
+++ b/src/sass/estilos.css
@@ -1,21 +1,180 @@
-.testimonial-content {
-  border: 1px solid red;
+.testimonial {
+  max-width: 850px;
 }
 
-.testimonial-content-images {
+.testimonial .testimonial-content .testimonial-image {
+  height: 311px;
+  background: url(../../images/pattern-bg.svg) center no-repeat;
+  background-size: 290px, cover;
+  position: relative;
+}
+
+@media screen and (min-width: 1024px) {
+  .testimonial .testimonial-content .testimonial-image {
+    background-size: 333px, cover;
+  }
+}
+
+.testimonial .testimonial-content .testimonial-image .testimonial-img {
+  max-width: 225px;
+  border-radius: 5px;
   width: 100%;
   margin: 0 auto;
-  border: 1px solid red;
+  position: absolute;
+  right: 0;
+  left: 0;
+  top: 45px;
+  -webkit-box-shadow: 0 50px 70px -50px;
+          box-shadow: 0 50px 70px -50px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+@media screen and (min-width: 1024px) {
+  .testimonial .testimonial-content .testimonial-image .testimonial-img {
+    max-width: 260px;
+    top: 30px;
+  }
+}
+
+.testimonial .testimonial-content .testimonial-text-content {
+  background: url(../../images/pattern-quotes.svg) center top no-repeat;
+  background-size: 70px;
+  padding-top: .4em;
+}
+
+@media screen and (min-width: 1024px) {
+  .testimonial .testimonial-content .testimonial-text-content {
+    background-position: 60px top;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .testimonial .testimonial-content {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: "content image";
+  }
+  .testimonial .testimonial-content .testimonial-image {
+    -ms-grid-row: 1;
+    -ms-grid-column: 2;
+    grid-area: image;
+  }
+}
+
+.testimonial .testimonial-content .testimonial-text-content {
+  grid-area: content;
+}
+
+.footer .wave {
+  background: url(../../images/pattern-curve.svg) bottom left no-repeat;
+  background-size: 340px, cover;
+  height: 100px;
 }
 
 body {
-  font-size: 16px;
+  font-family: 'Inter', sans-serif;
+  font-size: 32px;
   margin: 0;
+  padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  height: 100vh;
+}
+
+@media screen and (min-width: 1024px) {
+  body {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+:root {
+  --dark-Blue: rgb(32, 32, 70);
+  --grayish-Blue: rgb(186, 186, 207);
 }
 
 .wrapper {
-  padding: 0 1.5em;
+  padding: 0 .5em;
+  padding-top: 1em;
+}
+
+.testimonial-text {
+  color: var(--dark-Blue);
+  font-weight: 300;
+  font-size: .6em;
+  text-align: center;
+  margin-bottom: 0;
+}
+
+.testimonial-text span {
+  display: block;
+  text-align: center;
+  font-size: .8em;
+}
+
+.testimonial-text span:nth-child(1) {
+  padding-top: 2em;
+  font-weight: bold;
+}
+
+.testimonial-text span:nth-child(2) {
+  color: var(--grayish-Blue);
+  margin-top: .2em;
+}
+
+@media screen and (min-width: 1024px) {
+  .testimonial-text {
+    text-align: left;
+    position: relative;
+    left: 40%;
+  }
+  .testimonial-text span {
+    text-align: left;
+  }
+}
+
+.testimonial-text-front {
+  color: var(--dark-Blue);
+  font-weight: 300;
+  font-size: .6em;
+  text-align: center;
+  margin-bottom: 0;
+  padding: 0 .3em;
+}
+
+.testimonial-text-front span {
+  display: block;
+  text-align: center;
+  font-size: .8em;
+}
+
+.testimonial-text-front span:nth-child(1) {
+  padding-top: 2em;
+  font-weight: bold;
+}
+
+.testimonial-text-front span:nth-child(2) {
+  color: var(--grayish-Blue);
+  margin-top: .2em;
+}
+
+.is-hidden {
+  display: none;
+}
+
+@media screen and (min-width: 1024px) {
+  .is-hidden {
+    display: none !important;
+  }
 }
 /*# sourceMappingURL=estilos.css.map */
