--- a/src/sass/testimonials.scss
+++ b/src/sass/testimonials.scss
@@ -30,6 +30,7 @@
                 }
             }
             .button {
+                background-color: white;
                 width: 86px;
                 height: 39px;
                 border-radius: 30px;
@@ -40,31 +41,34 @@
                 margin: 0 auto;
                 border: none;
                 outline: none;
+                display: flex;
+                justify-content: space-around;
+                align-items: center;
                 @media screen and (min-width: 1021px) {
                     top: 87%;
                     right: 25%;
                 }
             }
-            .antes::after {
-                content: url(../../images/icon-next.svg);
-                background-repeat: no-repeat;
-                width: 30px;
-                height: 30px;
-                position: absolute;
-                top: 10px;
-                bottom: 0;
-                right: 5px;
-            }
-            .siguente::before {
-                content: url(../../images/icon-prev.svg);
-                background-repeat: no-repeat;
-                width: 30px;
-                height: 30px;
-                position: absolute;
-                top: 10px;
-                bottom: 0;
-                left: 5px;
-            }
+            // .antes::after {
+            //     content: url(../../images/icon-next.svg);
+            //     background-repeat: no-repeat;
+            //     width: 30px;
+            //     height: 30px;
+            //     position: absolute;
+            //     top: 10px;
+            //     bottom: 0;
+            //     right: 5px;
+            // }
+            // .siguente::before {
+            //     content: url(../../images/icon-prev.svg);
+            //     background-repeat: no-repeat;
+            //     width: 30px;
+            //     height: 30px;
+            //     position: absolute;
+            //     top: 10px;
+            //     bottom: 0;
+            //     left: 5px;
+            // }
         }
         .testimonial-text-content {
             background: url(../../images/pattern-quotes.svg) center top no-repeat;
