--- a/static/css/estilos.css
+++ b/static/css/estilos.css
@@ -47,6 +47,9 @@
   justify-content: space-around;
   align-items: center;
 }
+.testimonial .testimonial-content .testimonial-image .button label {
+  padding: 1em;
+}
 @media screen and (min-width: 1021px) {
   .testimonial .testimonial-content .testimonial-image .button {
     top: 87%;
@@ -78,10 +81,11 @@
 .testimonial .testimonial-content .testimonial-text-content {
   grid-area: content;
 }
+.testimonial input {
+  display: none;
+}
 
 .footer .wave {
-  background: url(../../images/pattern-curve.svg) bottom left no-repeat;
-  background-size: 440px, cover;
   height: 200px;
 }
 
@@ -93,13 +97,13 @@ body {
   box-sizing: border-box;
   height: 100vh;
 }
-
 @media screen and (min-width: 1024px) {
-  .center {
+  body {
+    background: url(../../images/pattern-curve.svg) bottom left no-repeat;
+    background-size: 440px, cover;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 70vh;
   }
 }
 
@@ -164,6 +168,16 @@ body {
 .testimonial-text-front span:nth-child(2) {
   color: var(--grayish-Blue);
   margin-top: 0.2em;
+}
+@media screen and (min-width: 1024px) {
+  .testimonial-text-front {
+    text-align: left;
+    position: relative;
+    left: 40%;
+  }
+  .testimonial-text-front span {
+    text-align: left;
+  }
 }
 
 .is-hidden {
