--- a/src/sass/testimonials.scss
+++ b/src/sass/testimonials.scss
@@ -44,6 +44,9 @@
                 display: flex;
                 justify-content: space-around;
                 align-items: center;
+                label {
+                    padding: 1em;
+                }
                 @media screen and (min-width: 1021px) {
                     top: 87%;
                     right: 25%;
@@ -91,5 +94,8 @@
         .testimonial-text-content {
             grid-area: content;
         }
+    }
+    input {
+        display: none;
     }
 }
