--- a/src/sass/footer.scss
+++ b/src/sass/footer.scss
@@ -1,6 +1,8 @@
 .footer {
     .wave {
-        height: 200px;
+        background: url(../../images/pattern-curve.svg) bottom left no-repeat;
+        background-size: 315px, cover;
+        height: 100px;
         // border: 1px solid red;
     }
 }
