--- a/static/css/estilos.css
+++ b/static/css/estilos.css
@@ -96,7 +96,9 @@
 }
 
 .footer .wave {
-  height: 200px;
+  background: url(../../images/pattern-curve.svg) bottom left no-repeat;
+  background-size: 315px, cover;
+  height: 100px;
 }
 
 body {
