--- a/src/sass/testimonials.scss
+++ b/src/sass/testimonials.scss
@@ -52,6 +52,14 @@
                     right: 25%;
                 }
             }
+            .antes:hover {
+                transform: scale(0.7);
+                /* Igual que: scaleX(0.7) scaleY(0.7) */
+            }
+            .siguente:hover {
+                transform: scale(0.7);
+                /* Igual que: scaleX(0.7) scaleY(0.7) */
+            }
             .antes {
                 display: flex;
                 justify-content: center;
